# CleanDesk

./: .gitignore  README.md  build.bat  pyproject.toml  pytest.ini  smart_organizer.spec
backend/: config.py  main.py  requirements.txt
backend/api/: websocket.py
backend/api/routes/: logs.py  organize.py  rules.py  scan.py
backend/core/: classifier.py  duplicate_detector.py  mover.py  scanner.py  watcher.py
backend/database/: connection.py  models.py
backend/schemas/: schemas.py
backend/services/: organize_service.py  scan_service.py
frontend/: index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/electron/: main.cjs  main.js  preload.cjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Dashboard.tsx  DuplicateDetector.tsx  FilePreview.tsx  LogViewer.tsx  RuleEditor.tsx  Settings.tsx  Sidebar.tsx  TitleBar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: appStore.ts
rust_engine/: Cargo.toml
rust_engine/src/: hasher.rs  lib.rs  scanner.rs
scripts/: build.ps1  dev.ps1
tests/: test_api.py  test_classifier.py  test_duplicate_detector.py  test_mover.py  test_scanner.py
